# SkyPro_Beta_group_Python

./: .coverage  .env  mylog.txt  pyproject.toml
data/: config.py  transactions.json
src/: currency.json  decorators.py  generators.py  logger.py  main.py  masks.py  processing.py  read_the_table.py  utils.py  widget.py
test/: .coverage  mylog.txt  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_read_the_table.py  test_utils.py  test_widget.py
