[tool.poetry]
name = "skypro-beta-group-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
isort = "^5.12.0"
black = "^23.10.0"
mypy = "^1.6.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
